# epaper

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  sdkconfig
components/epaper_driver/: CMakeLists.txt  epaper.c  epaper.h  epaper_font.c  epaper_font.h  epaper_gui.c  epaper_gui.h
components/lis3dh/: CMakeLists.txt  lis3dh.c  lis3dh.h
components/ssd1680_epaper_driver/: CMakeLists.txt  qy_ssd1680_epaper.c  qy_ssd1680_epaper.h  qy_ssd1680_font.h  ssd1680_epaper.c  ssd1680_epaper.h
doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_0123381972d453f8667415b3b08afbc2.html  dir_0123381972d453f8667415b3b08afbc2.js  dir_409f97388efe006bc3438b95e9edef48.html  dir_409f97388efe006bc3438b95e9edef48.js  doxygen_crawl.html  epaper_8c.html  epaper_8c.js  epaper_8h.html  epaper_8h.js  epaper_8h_source.html  epaper__font_8h.html  epaper__font_8h.js  epaper__font_8h_source.html  epaper__gui_8c.html  epaper__gui_8c.js  epaper__gui_8h.html  epaper__gui_8h.js  epaper__gui_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  group___font___module___info.html  group__epd__define__feather.html  group__epd__define__feather.js  group__epd__define__gpio.html  group__epd__define__gpio.js  index.js  navtreedata.js  navtreeindex0.js  struct_p_a_i_n_t-members.html  (+16 more)
main/: CMakeLists.txt  config_template.h  hello_world_main.c  idf_component.yml
main/board_init/: board_init.c  board_init.h
main/quote_fetcher/: quote_fetcher.c  quote_fetcher.h
main/wifi/: wifi.c  wifi.h  wifi_html.h
(+53 files in other folders)
